# recipes-mcp-rs

./: .dockerignore  .env.enc  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yaml  coverage_report.md  regex_test.rs  repro.rs
.cache/: search_22196d2cb3e223a2.json  search_225a1f572978bc04.json  search_b0012aabbabba275.json
.gemini/commands/: build-fix.toml  release-summary.toml  release.toml  test-fix.toml  update-deps.toml  update-docs.toml  verify-recipes-mcp.toml
.github/workflows/: ci.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_image_extraction_20260305/: index.md  spec.md
conductor/archive/cooklang_export_20260305/: plan.md
conductor/archive/coverage_refinement_20260307/: index.md  metadata.json  spec.md
conductor/archive/custom_config_path_20260306/: index.md  plan.md  spec.md
conductor/archive/dietary_filtering_20260304/: index.md  metadata.json  plan.md
conductor/archive/dietary_metadata_20260304/: plan.md
conductor/archive/external_nutrition_api_20260305/: index.md  plan.md  spec.md
conductor/archive/extra_search_providers_20260305/: index.md  spec.md
conductor/archive/fix_search_tests_20260305/: index.md  metadata.json  plan.md
conductor/archive/image_extraction_20260304/: metadata.json  plan.md  spec.md
conductor/archive/ingredient_conversion_20260304/: plan.md  spec.md
conductor/archive/mcp_optimization_20260303/: index.md  metadata.json  plan.md  spec.md
conductor/archive/multi_crate_scraping_20260303/: plan.md
conductor/archive/multi_provider_search_20260304/: plan.md  spec.md
conductor/archive/nutrition_estimation_20260304/: metadata.json  plan.md
conductor/archive/recipe_admonitions_20260305/: plan.md  spec.md
conductor/archive/recipe_formatting_20260304/: metadata.json  plan.md
conductor/archive/recipe_sanitization_20260305/: index.md  metadata.json  spec.md
conductor/archive/recipe_scaling_20260304/: plan.md  spec.md
conductor/archive/recipe_scraping_20260303/: index.md  plan.md
conductor/archive/recipe_search_20260304/: plan.md  spec.md
conductor/archive/search_caching_20260305/: index.md
conductor/archive/togglable_weight_conversion_20260305/: index.md  metadata.json  plan.md  spec.md
conductor/archive/transport_http_sse_20260304/: metadata.json  plan.md
conductor/archive/volume_conversion_20260305/: plan.md  spec.md
conductor/archive/weight_conversion_20260304/: metadata.json  spec.md
conductor/tracks/advanced_image_extraction_20260305/: metadata.json  plan.md
conductor/tracks/cooklang_export_20260305/: index.md  metadata.json  plan.md  spec.md
config/: example.toml
src/: cache.rs  config.rs  dietary.rs  formatter.rs  handler.rs  lib.rs  main.rs  nutrition.rs  scaling.rs  scraper.rs  search.rs  temp_test.rs
src/conversion/: data.rs  engine.rs  king_arthur.rs  mod.rs  parser.rs  volume.rs
src/nutrition/: edamam.rs  mod.rs
src/transport/: http.rs
(+56 files in other folders)
