[package]
name = "recipes-mcp-rs"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml", "yaml", "json"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.32"
mcp-sdk-rs = "0.3.4"
openssl = { version = "0.10.76", features = ["vendored"] }
recipe-scraper = "0.1.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "json"] }
rust-recipe = { version = "0.2.0", features = ["async"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.26.0"

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)
